--- a/extension/popup.html
+++ b/extension/popup.html
@@ -29,6 +29,10 @@
             <button id="saveSchedule" type="button">保存</button>
             <button id="runDailyNow" type="button">立即运行</button>
           </div>
+          <label class="option">
+            <input type="checkbox" id="cacheUpdateEnabled" checked />
+            更新URL列表缓存（关闭则只用缓存）
+          </label>
           <p id="autoCategoryHint" class="hint"></p>
           <p id="scheduleInfo" class="hint">尚未设置自动抓取</p>
           <p id="autoStatus" class="hint"></p>
